# HelloCTest

./: CMakeLists.txt  README.md  pypeline.yaml  pyproject.toml
src/: greeter.c  greeter_test.cc
